--- a/index.html
+++ b/index.html
@@ -11,17 +11,18 @@
 </head>
 
 <body>
-  <h1>
-    Índice
+  <h1 class="text-center">
+    GONZALO VERDUGO GARRIDO
   </h1>
   <hr>
-  <ul id="nav">
-
-    <li><a href="html-css/benchmark/benchmark.php">BENCHMARK</a></li>
-    <li><a href="html-css/examen-diw.html">GUÍA DE DISEÑO</a></li>
-    <li><a href="html-css/13-contenedores.html">PELICULÓN</a></li>
-    <li><a href="html-css/01-xhtml.html">VINTAGE</a></li>
-  </ul>
+  <nav>
+    <ul>
+    <li><a class="indexLink" href="html-css/benchmark/benchmark.php">BENCHMARK</a></li>
+    <li><a class="indexLink" href="html-css/examen-diw.html">GUÍA DE DISEÑO</a></li>
+    <li><a class="indexLink" href="html-css/13-contenedores.html">PELICULÓN</a></li>
+    <li><a class="indexLink" href="html-css/01-xhtml.html">VINTAGE</a></li>
+    </ul>
+  </nav>
 
 
 </body>
