pagina de contacto

--- a/html-css/datos-personales-mail.html
+++ b/html-css/datos-personales-mail.html
@@ -25,7 +25,7 @@
 
     <h2>Formulario datos personales</h2>
     <h3>Es obligatorio completar todos los campos</h3>
-    <form action="php/correo/enviar.php" method="post" enctype="text/plain">
+    <form action="php/correo/enviar.php" method="post" >
         <label for="nombre">Nombre</label>
         <input type="text" name="nombre" id="nombre" placeholder="Nombre de
     usuario" maxlength="20" pattern="[a-zA-Z0-9]+" required autofocus title="Sólo números y letras con una longitud máxima de 20 caracterees
