--- a/html-css/php/correo/datos-personales-enviophp.html
+++ b/html-css/php/correo/datos-personales-enviophp.html
@@ -43,7 +43,7 @@
                     <div class="contact-div-entero">
                         <label for="nombre">Nombre</label>
 
-                        <input type="text" name="nombre" id="nombre" placeholder="Ej. Juan José" maxlength="20"
+                        <input type="text" name="nombre" id="nombre" placeholder="Ej. Juan" maxlength="20"
                             pattern="[a-zA-Z0-9]+" required autofocus
                             title="Sólo números y letras con una longitud máxima de 20 caracterees incluidos espacios en blanco">
                     </div>
@@ -65,7 +65,7 @@
                 <div class="contact-div-entero">
                     <label for="mensaje">Mensaje</label>
 
-                    <textarea  rows="10" type="text" name="mensaje" id="mensaje" placeholder="Contactame" required
+                    <textarea rows="10" type="text" name="mensaje" id="mensaje" placeholder="Contactame" required
                         title="Sólo números comprendidos entre 18 y 99" max="200"></textarea>
                 </div>
                 <!-- <label for="edad">Edad</label>
