--- a/html-css/13-contenedores.html
+++ b/html-css/13-contenedores.html
@@ -25,13 +25,8 @@
     </h1>
     <blockquote>
       <p>
-        <<<a href="12-multimedia.html" title="Enlace a ejercicio de listas">Anterior</a>| <a href="../index.html"
-<<<<<<< HEAD
-            title="Enlace a la portada de la web">Portada</a>| <a href="#"
-            title="Enlace a la siguiente página">Siguiente</a> >>
-=======
-            title="Enlace a la portada de la web">Portada</a> >>
->>>>>>> adead732e624ddeb7372c26d266ecf879010941f
+        <a href="12-multimedia.html" title="Enlace a ejercicio de listas">Anterior</a>||<a href="../index.html"
+          title="Enlace a la portada de la web">Portada</a>
       </p>
     </blockquote>
   </header>
