--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head lang="es" dir="ltr">
   <meta charset="utf-8" />
   <title> Gonzalo Verdugo </title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="Repaso de etiquetas fundamentales de html">
   <meta name="author" content="Gonzalo Verdugo">
   <link rel="icon" type="image/icon" href="favicon.ico">
@@ -18,11 +19,11 @@
   <nav>
     <ul>
 
-    <li><a class="indexLink" href="html-css/php/correo/datos-personales-enviophp.html">CONTACTO</a></li>
-    <li><a class="indexLink" href="html-css/benchmark/benchmark.php">BENCHMARK</a></li>
-    <li><a class="indexLink" href="html-css/examen-diw.html">GUÍA DE DISEÑO</a></li>
-    <li><a class="indexLink" href="html-css/13-contenedores.html">PELICULÓN</a></li>
-    <li><a class="indexLink" href="html-css/01-xhtml.html">VINTAGE</a></li>
+      <li><a class="indexLink" href="html-css/php/correo/datos-personales-enviophp.html">CONTACTO</a></li>
+      <li><a class="indexLink" href="html-css/benchmark/benchmark.php">BENCHMARK</a></li>
+      <li><a class="indexLink" href="html-css/examen-diw.html">GUÍA DE DISEÑO</a></li>
+      <li><a class="indexLink" href="html-css/13-contenedores.html">PELICULÓN</a></li>
+      <li><a class="indexLink" href="html-css/01-xhtml.html">VINTAGE</a></li>
     </ul>
   </nav>
 
