--- a/html-css/04-enlaces.html
+++ b/html-css/04-enlaces.html
@@ -1,53 +1,56 @@
 <!DOCTYPE html>
 
-<head lang="es" dir="ltr">
-  <meta charset="utf-8" />
-  <title> ENLACES </title>
-  <meta name="description" content="Mira todo tipo de enlaces en la página siguiente">
-  <meta name="author" content="Gonzalo Verdugo">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/icon" href="../favicon.ico">
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+<html lang="es" dir="ltr">
+
+<head>
+    <meta charset="utf-8" />
+    <title> ENLACES </title>
+    <meta name="description" content="Mira todo tipo de enlaces en la página siguiente">
+    <meta name="author" content="Gonzalo Verdugo">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/icon" href="../favicon.ico">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
-  <h1>
-    <center>ENLACES</center>
-  </h1>
+    <h1>
+        <center>ENLACES</center>
+    </h1>
 
-  <blockquote>
-    <p>
-      <<<a href="03-listas.html" title="Enlace a ejercicio de listas">Anterior</a>| <a href="../index.html"
-          title="Enlace a la portada de la web">Portada</a>| <a href="05-imagenes-1.html"
-          title="Enlace a la siguiente página">Siguiente</a> >>
-    </p>
-  </blockquote>
-  <hr width="50%" align="left">
-  <p><b><i>Estos son distintos ejemplos de enlaces que se pueden configurar mediante el código</i></b></p>
+    <blockquote>
+        <p>
+            <<<a href="03-listas.html" title="Enlace a ejercicio de listas">Anterior</a>| <a href="../index.html"
+                    title="Enlace a la portada de la web">Portada</a>| <a href="05-imagenes-1.html"
+                    title="Enlace a la siguiente página">Siguiente</a> >>
+        </p>
+    </blockquote>
+    <hr width="50%" align="left">
+    <p><b><i>Estos son distintos ejemplos de enlaces que se pueden configurar mediante el código</i></b></p>
 
-  <ol>
-    <li><b>Enlace a una posición de una página de mi estructura de carpetas.</b>
-      <p><a href="02-texto.html#nuevoCromosoma" title="Enlace al parrafo relacionado al nuevo cromosoma">Sobre los
-          nuevos cromosomas</a></p>
-    </li>
-    <li><b>Enlace a un servido FTP públic con contenidos musicales</b>
-      <p>
-        <a href="" title="Enlace a un servidor FTP de música">Montones de música</a></p>
-    </li>
-    <li><b>Enlace a un fichero XML</b>
-      <p><a href="../../servidor/lote.xml" title="Enlace a un fichero XML">Pulsa para ver la estructura típica de un
-          fichero XML</a></p>
-    </li>
-    <li><b>Necesito un nuevo Televisor ¿Donde?</b>
-      <p><a
-          href="https://www.amazon.es/Samsung-Crystal-UHD-2020-65TU8005/dp/B083T21S46/ref=redir_mobile_desktop?ie=UTF8&aaxitk=a177aEt61BOIzlRpYeyB.Q&hsa_cr_id=4906465760902&ref_=sbx_be_s_sparkle_mcd_asin_0"
-          title="Enlace a la compra de un televisor">Mira esta oferta</a></p>
-    </li>
-    <li><b>Enlace interno, pulsa y bajas hasta el final</b>
-      <p> <a href="#final" title="Enlace que baja hasta el final de la página">BAJAR</a></p>
-    </li>
-  </ol>
-  <pre>
+    <ol>
+        <li><b>Enlace a una posición de una página de mi estructura de carpetas.</b>
+            <p><a href="02-texto.html#nuevoCromosoma" title="Enlace al parrafo relacionado al nuevo cromosoma">Sobre los
+                    nuevos cromosomas</a></p>
+        </li>
+        <li><b>Enlace a un servido FTP públic con contenidos musicales</b>
+            <p>
+                <a href="" title="Enlace a un servidor FTP de música">Montones de música</a>
+            </p>
+        </li>
+        <li><b>Enlace a un fichero XML</b>
+            <p><a href="../../servidor/lote.xml" title="Enlace a un fichero XML">Pulsa para ver la estructura típica de
+                    un
+                    fichero XML</a></p>
+        </li>
+        <li><b>Necesito un nuevo Televisor ¿Donde?</b>
+            <p><a href="https://www.amazon.es/Samsung-Crystal-UHD-2020-65TU8005/dp/B083T21S46/ref=redir_mobile_desktop?ie=UTF8&aaxitk=a177aEt61BOIzlRpYeyB.Q&hsa_cr_id=4906465760902&ref_=sbx_be_s_sparkle_mcd_asin_0"
+                    title="Enlace a la compra de un televisor">Mira esta oferta</a></p>
+        </li>
+        <li><b>Enlace interno, pulsa y bajas hasta el final</b>
+            <p> <a href="#final" title="Enlace que baja hasta el final de la página">BAJAR</a></p>
+        </li>
+    </ol>
+    <pre>
 
 
 
