--- a/html-css/07-mapas-de-imagen.html
+++ b/html-css/07-mapas-de-imagen.html
@@ -1,56 +1,58 @@
 <!DOCTYPE html>
 
-<head lang="es" dir="ltr">
-  <meta charset="utf-8" />
-  <title> Mapas de Imagen </title>
-  <meta name="author" content="Gonzalo Verdugo">
-  <meta name="description" content="Mi primer mapa de imagenes">
-  <link rel="icon" type="image/icon" href="../favicon.ico">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+<html lang="es" dir="ltr">
+
+<head>
+    <meta charset="utf-8" />
+    <title> Mapas de Imagen </title>
+    <meta name="author" content="Gonzalo Verdugo">
+    <meta name="description" content="Mi primer mapa de imagenes">
+    <link rel="icon" type="image/icon" href="../favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
-  <h1 id="inicio">
-    <center>Mapas de Imagen</center>
-  </h1>
+    <h1 id="inicio">
+        <center>Mapas de Imagen</center>
+    </h1>
 
-  <blockquote>
-    <p>
-      <<<a href="06-imagenes-2.html" title="Enlace a ejercicio de listas">Anterior</a>| <a href="../index.html"
-          title="Enlace a la portada de la web">Portada</a>| <a href="08-tablas-1.html"
-          title="Enlace a la siguiente página">Siguiente</a> >>
+    <blockquote>
+        <p>
+            <<<a href="06-imagenes-2.html" title="Enlace a ejercicio de listas">Anterior</a>| <a href="../index.html"
+                    title="Enlace a la portada de la web">Portada</a>| <a href="08-tablas-1.html"
+                    title="Enlace a la siguiente página">Siguiente</a> >>
+        </p>
+    </blockquote>
+    <hr>
+
+
+    <img width="100px" align="left" src="./img/webcam.jpg" alt="Webcam">
+
+    <h2>WEBCAM VIEWER</h2>
+
+    <p id="instruccionesCamara">Desplazate sobre el Mapa para conectar con la webcam de la zone en cuestión, las cámaras
+        se abrirán en
+        nuevas
+        pestañas.
     </p>
-  </blockquote>
-  <hr>
-
-
-  <img width="100px" align="left" src="./img/webcam.jpg" alt="Webcam">
-
-  <h2>WEBCAM VIEWER</h2>
-
-  <p id="instruccionesCamara">Desplazate sobre el Mapa para conectar con la webcam de la zone en cuestión, las cámaras
-    se abrirán en
-    nuevas
-    pestañas.
-  </p>
 
 
 
 
-  <img src="img/spain-map-cameras.jpg" alt="Mapa con diferentes cámaras en españa" usemap="#imgmap2020102985353">
+    <img src="img/spain-map-cameras.jpg" alt="Mapa con diferentes cámaras en españa" usemap="#imgmap2020102985353">
 
-  <map id="imgmap2020102985353" name="imgmap2020102985353"><area shape="rect" alt="Cámara en Galicia" title=""
-      coords="38,62,84,90" href="http://www.crtvg.es/crtvg/camaras-web/a-guarda" target="_blank" /><area shape="rect"
-      alt="Cámara en Madrid" title="" coords="196,140,239,175"
-      href="https://www.skylinewebcams.com/en/webcam/espana/comunidad-de-madrid/madrid/puerta-del-sol-tio-pepe.html"
-      target="_blank" /><area shape="rect" alt="Cámara en Mallorca" title="" coords="437,185,480,213"
-      href="https://www.skylinewebcams.com/en/webcam/espana/islas-baleares/mallorca/mallorca-alcudia.html"
-      target="_blank" /><area shape="rect" alt="Cámara en Barcelona" title="" coords="400,89,452,125"
-      href="https://www.skylinewebcams.com/en/webcam/espana/cataluna/barcelona/playa-barceloneta.html"
-      target="_blank" /><!-- Created by Online Image Map Editor (http://www.maschek.hu/imagemap/index) --></map>
-  <hr>
-  <p align="right"><a href="#inicio">SUBIR</a></p>
+    <map id="imgmap2020102985353" name="imgmap2020102985353"><area shape="rect" alt="Cámara en Galicia" title=""
+            coords="38,62,84,90" href="http://www.crtvg.es/crtvg/camaras-web/a-guarda" target="_blank" /><area
+            shape="rect" alt="Cámara en Madrid" title="" coords="196,140,239,175"
+            href="https://www.skylinewebcams.com/en/webcam/espana/comunidad-de-madrid/madrid/puerta-del-sol-tio-pepe.html"
+            target="_blank" /><area shape="rect" alt="Cámara en Mallorca" title="" coords="437,185,480,213"
+            href="https://www.skylinewebcams.com/en/webcam/espana/islas-baleares/mallorca/mallorca-alcudia.html"
+            target="_blank" /><area shape="rect" alt="Cámara en Barcelona" title="" coords="400,89,452,125"
+            href="https://www.skylinewebcams.com/en/webcam/espana/cataluna/barcelona/playa-barceloneta.html"
+            target="_blank" /><!-- Created by Online Image Map Editor (http://www.maschek.hu/imagemap/index) --></map>
+    <hr>
+    <p align="right"><a href="#inicio">SUBIR</a></p>
 
 </body>
 
