--- a/html-css/11-iframes.html
+++ b/html-css/11-iframes.html
@@ -1,66 +1,68 @@
 <!DOCTYPE html>
+<html lang="es" dir="ltr">
 
-<head lang="es" dir="ltr">
-  <meta charset="utf-8" />
-  <title> IFRAME </title>
-  <meta name="author" content="Gonzalo Verdugo">
-  <meta name="description" content="Plantilla inicial del curso de Diseño de Interfaces">
-  <link rel="icon" type="image/icon" href="../favicon.ico">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+<head>
+    <meta charset="utf-8" />
+    <title> IFRAME </title>
+    <meta name="author" content="Gonzalo Verdugo">
+    <meta name="description" content="Plantilla inicial del curso de Diseño de Interfaces">
+    <link rel="icon" type="image/icon" href="../favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
-  <h1>
-    <center id="inicio">IFRAMES - I</center>
-  </h1>
-  <blockquote>
-    <p>
-      <<<a href="09-formularios-1.html" title="Enlace a ejercicio de listas">Anterior</a>| <a href="../index.html"
-          title="Enlace a la portada de la web">Portada</a>| <a href="12-multimedia.html"
-          title="Enlace a la siguiente página">Siguiente</a> >>
-    </p>
-  </blockquote>
-  <hr>
+    <h1>
+        <center id="inicio">IFRAMES - I</center>
+    </h1>
+    <blockquote>
+        <p>
+            <<<a href="09-formularios-1.html" title="Enlace a ejercicio de listas">Anterior</a>| <a href="../index.html"
+                    title="Enlace a la portada de la web">Portada</a>| <a href="12-multimedia.html"
+                    title="Enlace a la siguiente página">Siguiente</a> >>
+        </p>
+    </blockquote>
+    <hr>
 
-  <p>Editor Empleado <a href="https://code.visualstudio.com/Download">VSCode</a></p>
+    <p>Editor Empleado <a href="https://code.visualstudio.com/Download">VSCode</a></p>
 
-  <center>
-    <iframe src="https://www.elmundo.es/" width="60%" height="500px" frameborder="0"></iframe>
-    <hr>
-    <br>
-    <iframe src="../index.html" width="60%" height="500px" frameborder="0"></iframe>
-    <hr>
-    <br>
-    <iframe
-      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3038.296205351559!2d-3.700768684311589!3d40.40228846444105!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd4226320fb5cea1%3A0x8ef3c7a3c376a107!2sC.%20de%20Bernardino%20Obreg%C3%B3n%2C%2025%2C%2028012%20Madrid!5e0!3m2!1ses!2ses!4v1605521389927!5m2!1ses!2ses"
-      width="60%" height='500px' frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
-      tabindex="0"></iframe>
-    <hr>
-    <br>
-    <iframe
-      src="https://www.haikudeck.com/e/L06DcjrQQH/?isUrlHashEnabled=false&isPreviewEnabled=false&isHeaderVisible=false"
-      width="60%" height="500" frameborder="0" marginheight="0" marginwidth="0"></iframe><br /><span
-      style="font-family: arial, sans-serif; font-size: 8pt;"><a title="Startup Pitch Template"
-        href="https://www.haikudeck.com/p/L06DcjrQQH">Startup Pitch Template</a> - Created with Haiku Deck, presentation
-      software that inspires</span>;
-    <hr>
-    <br>
-    <iframe width="45%" height="500px" src="https://www.youtube.com/embed/wQeQc_ylhvQ" frameborder="0"
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-      allowfullscreen></iframe>
-    <hr>
-    <br>
-    <iframe src="https://www.minijuegos.com/juego/moto-x3m" width="60%" height="500px" frameborder="0"></iframe>
-    <hr>
-    <br>
-    <iframe frameborder=0 height=500 width=550
-      src="https://twitframe.com/show?url=https://twitter.com/WillyrexYT/status/1290322893415550976?ref_src=twsrc%5Etfw%7Ctwcamp%5Etweetembed%7Ctwterm%5E1290322893415550976%7Ctwgr%5E&ref_url=https%3A%2F%2Fwww.yasss.es%2Factualidad%2Fviral%2Fwillyrex-va-a-ser-padre-reacciones-be5ma_18_2990145098.html"></iframe>
-    <hr>
-    <br>
-  </center>
+    <center>
+        <iframe src="https://www.elmundo.es/" width="60%" height="500px" frameborder="0"></iframe>
+        <hr>
+        <br>
+        <iframe src="../index.html" width="60%" height="500px" frameborder="0"></iframe>
+        <hr>
+        <br>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3038.296205351559!2d-3.700768684311589!3d40.40228846444105!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd4226320fb5cea1%3A0x8ef3c7a3c376a107!2sC.%20de%20Bernardino%20Obreg%C3%B3n%2C%2025%2C%2028012%20Madrid!5e0!3m2!1ses!2ses!4v1605521389927!5m2!1ses!2ses"
+            width="60%" height='500px' frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+            tabindex="0"></iframe>
+        <hr>
+        <br>
+        <iframe
+            src="https://www.haikudeck.com/e/L06DcjrQQH/?isUrlHashEnabled=false&isPreviewEnabled=false&isHeaderVisible=false"
+            width="60%" height="500" frameborder="0" marginheight="0" marginwidth="0"></iframe><br /><span
+            style="font-family: arial, sans-serif; font-size: 8pt;"><a title="Startup Pitch Template"
+                href="https://www.haikudeck.com/p/L06DcjrQQH">Startup Pitch Template</a> - Created with Haiku Deck,
+            presentation
+            software that inspires</span>;
+        <hr>
+        <br>
+        <iframe width="45%" height="500px" src="https://www.youtube.com/embed/wQeQc_ylhvQ" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+        <hr>
+        <br>
+        <iframe src="https://www.minijuegos.com/juego/moto-x3m" width="60%" height="500px" frameborder="0"></iframe>
+        <hr>
+        <br>
+        <iframe frameborder=0 height=500 width=550
+            src="https://twitframe.com/show?url=https://twitter.com/WillyrexYT/status/1290322893415550976?ref_src=twsrc%5Etfw%7Ctwcamp%5Etweetembed%7Ctwterm%5E1290322893415550976%7Ctwgr%5E&ref_url=https%3A%2F%2Fwww.yasss.es%2Factualidad%2Fviral%2Fwillyrex-va-a-ser-padre-reacciones-be5ma_18_2990145098.html"></iframe>
+        <hr>
+        <br>
+    </center>
 
-  <p align='right'><a href="#inicio">SUBIR</a></p>
+    <p align='right'><a href="#inicio">SUBIR</a></p>
 
 
 </body>
