--- a/html-css/plantilla-html5.html
+++ b/html-css/plantilla-html5.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="es" dir="ltr">
 
-<head lang="es" dir="ltr">
-  <meta charset="utf-8" />
-  <title> Plantilla </title>
-  <meta name="author" content="Gonzalo Verdugo">
-  <meta name="description" content="Plantilla inicial del curso de Diseño de Interfaces">
-  <link rel="icon" type="image/icon" href="../favicon.ico">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="style.css">
+<head>
+    <meta charset="utf-8" />
+    <title> Plantilla </title>
+    <meta name="author" content="Gonzalo Verdugo">
+    <meta name="description" content="Plantilla inicial del curso de Diseño de Interfaces">
+    <link rel="icon" type="image/icon" href="../favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
 
 <body>
-  <h1>
-    <center>PLANTILLA</center>
-  </h1>
-  <blockquote>
-    <p>
-      <<<a href="#" title="Enlace a ejercicio de listas">Anterior</a>| <a href="../index.html"
-          title="Enlace a la portada de la web">Portada</a>| <a href="#"
-          title="Enlace a la siguiente página">Siguiente</a> >>
-    </p>
-  </blockquote>
-  <hr>
+    <h1>
+        <center>PLANTILLA</center>
+    </h1>
+    <blockquote>
+        <p>
+            <<<a href="#" title="Enlace a ejercicio de listas">Anterior</a>| <a href="../index.html"
+                    title="Enlace a la portada de la web">Portada</a>| <a href="#"
+                    title="Enlace a la siguiente página">Siguiente</a> >>
+        </p>
+    </blockquote>
+    <hr>
 
-  <hr noshade size="10px" color="#0000FF">
+    <hr noshade size="10px" color="#0000FF">
 
 </body>
 
