--- a/html-css/02-texto.html
+++ b/html-css/02-texto.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
+<html lang="es" dir="ltr">
 
-<head lang="es">
-  <meta charset="utf-8" />
-  <title> 02-texto.html </title>
-  <meta name="description"
-    content="El ácido desoxirribonucleico, conocido también por las siglas ADN, es un ácido nucleico que contiene las instrucciones genéticas usadas en el desarrollo y funcionamiento de todos los organismos">
-  <meta name="author" content="Gonzalo Verdugo">
-  <link rel="icon" type="image/icon" href="../favicon.ico">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+<head>
+    <meta charset="utf-8" />
+    <title> 02-texto.html </title>
+    <meta name="description"
+        content="El ácido desoxirribonucleico, conocido también por las siglas ADN, es un ácido nucleico que contiene las instrucciones genéticas usadas en el desarrollo y funcionamiento de todos los organismos">
+    <meta name="author" content="Gonzalo Verdugo">
+    <link rel="icon" type="image/icon" href="../favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 
 
 
@@ -16,74 +17,77 @@
 </head>
 
 <body>
-  <h1>
-    GONZALO VERUDO 2ºDAW
-  </h1>
+    <h1>
+        GONZALO VERUDO 2ºDAW
+    </h1>
 
-  <h2>
-    Crean el primer cromosoma sintético de levadura
-  </h2>
-  <blockquote>
-    <<<a href="01-xhtml.html" title="Enlace al ejercicio anterior">Anterior</a>| <a href="../index.html"
-        title="Enlace a la portada de la web">Portada</a>| <a href="03-listas.html"
-        title="Enlace a la siguiente página">Siguiete</a>
-      >>
-  </blockquote>
-  <hr>
-  <p><b>Gonzalo Verdugo</b></p>
-  <p>Editor de Ciencia, <abbr title="Bizcocho Bollo Chocolate">BBC</abbr></p>
-  <hr>
-  <h3>Un equipo internacional de invertigadores fabrica el primer cromosoma sintético de un organismo vivo complejo
-  </h3>
-  <div>
-    <p>Ya se habia conseguido diseñar con anterioridad
-      <dfn
-        title="El ácido desoxirribonucleico, conocido también por las siglas ADN, es un ácido nucleico que contiene las instrucciones genéticas usadas en el desarrollo y funcionamiento de todos los organismos vivos1​ y algunos virus; también es responsable de la transmisión hereditaria. La función principal de la molécula de ADN es el almacenamiento a largo plazo de información para construir otros componentes de las células, como las proteínas y las moléculas de ARN. Los segmentos de ADN que llevan esta información genética son llamados genes, pero las otras secuencias de ADN tienen propósitos estructurales o toman parte en la regulación del uso de esta información genética.">ADN</dfn>
-      sintético para organismos más simples, como bacterias.
-    </p>
-
-
-    <p>Pero la levadura, como una forma de vida cuyas células contiene un nucleo, está relacionada con plantas y
-      animales
-      y comparte <b>2000 genes</b> con nosotros </p>
-
-    <p>Por eso la creación del primero de los 16 cromosomas de la levadura en un enorme avance en el novedoso y
-      emergente
-      campo de la ciencia conocido como biologia sintética.</p>
-  </div>
+    <h2>
+        Crean el primer cromosoma sintético de levadura
+    </h2>
+    <blockquote>
+        <<<a href="01-xhtml.html" title="Enlace al ejercicio anterior">Anterior</a>| <a href="../index.html"
+                title="Enlace a la portada de la web">Portada</a>| <a href="03-listas.html"
+                title="Enlace a la siguiente página">Siguiete</a>
+            >>
+    </blockquote>
+    <hr>
+    <p><b>Gonzalo Verdugo</b></p>
+    <p>Editor de Ciencia, <abbr title="Bizcocho Bollo Chocolate">BBC</abbr></p>
+    <hr>
+    <h3>Un equipo internacional de invertigadores fabrica el primer cromosoma sintético de un organismo vivo complejo
+    </h3>
+    <div>
+        <p>Ya se habia conseguido diseñar con anterioridad
+            <dfn
+                title="El ácido desoxirribonucleico, conocido también por las siglas ADN, es un ácido nucleico que contiene las instrucciones genéticas usadas en el desarrollo y funcionamiento de todos los organismos vivos1​ y algunos virus; también es responsable de la transmisión hereditaria. La función principal de la molécula de ADN es el almacenamiento a largo plazo de información para construir otros componentes de las células, como las proteínas y las moléculas de ARN. Los segmentos de ADN que llevan esta información genética son llamados genes, pero las otras secuencias de ADN tienen propósitos estructurales o toman parte en la regulación del uso de esta información genética.">ADN</dfn>
+            sintético para organismos más simples, como bacterias.
+        </p>
 
 
-  <pre>
+        <p>Pero la levadura, como una forma de vida cuyas células contiene un nucleo, está relacionada con plantas y
+            animales
+            y comparte <b>2000 genes</b> con nosotros </p>
+
+        <p>Por eso la creación del primero de los 16 cromosomas de la levadura en un enorme avance en el novedoso y
+            emergente
+            campo de la ciencia conocido como biologia sintética.</p>
+    </div>
+
+
+    <pre>
       Los genes en el cromosoma original fueron reemplazados
              con versiones sintéticas y luego el cromosoma fabricado
         por el hombre fue integrado con éxito en una célula de levadura.
   </pre>
 
-  <p>Los científicos esperaron a que la célula ses reprodujera, superando así una prueba esencial de viabilidad.</p>
+    <p>Los científicos esperaron a que la célula ses reprodujera, superando así una prueba esencial de viabilidad.</p>
 
-  <p>La levadura es especialmente preferida en estas investigaciones por su uso establecido en industrias clave como
-    elaboración de cerveza o de pan y por su potencial para futuras aplicaciones industriales.</p>
+    <p>La levadura es especialmente preferida en estas investigaciones por su uso establecido en industrias clave como
+        elaboración de cerveza o de pan y por su potencial para futuras aplicaciones industriales.</p>
 
-  <blockquote>
     <blockquote>
-      <blockquote>
         <blockquote>
-          <p>Una compañia en California, Estados Unidos, ya ha usado biologia sintética para crear una cepa de
-            levadura
-            que puede producir <del>artemisa</del> <ins>artemisinina</ins>, ingrediente de un fármaco contra la
-            malaria.
-          </p>
+            <blockquote>
+                <blockquote>
+                    <p>Una compañia en California, Estados Unidos, ya ha usado biologia sintética para crear una cepa de
+                        levadura
+                        que puede producir <del>artemisa</del> <ins>artemisinina</ins>, ingrediente de un fármaco contra
+                        la
+                        malaria.
+                    </p>
 
-          <p id="nuevoCromosoma">El equipo internacional ha conseguido sintetizar el cromosoma III de la levadura
-            empleada para fabricar pan
-            (los cromosomas de la levadura se designan normalmente con números romanos), y sus resultados se publican
-            en
-            la revista <em>Science</em>.</p>
+                    <p id="nuevoCromosoma">El equipo internacional ha conseguido sintetizar el cromosoma III de la
+                        levadura
+                        empleada para fabricar pan
+                        (los cromosomas de la levadura se designan normalmente con números romanos), y sus resultados se
+                        publican
+                        en
+                        la revista <em>Science</em>.</p>
+                </blockquote>
+            </blockquote>
         </blockquote>
-      </blockquote>
     </blockquote>
-  </blockquote>
-  <hr>
+    <hr>
 
 </body>
 
