--- a/html-css/09-formularios-1.html
+++ b/html-css/09-formularios-1.html
@@ -1,122 +1,126 @@
 <!DOCTYPE html>
 
-<head lang="es" dir="ltr">
-  <meta charset="utf-8" />
-  <title> Formularios </title>
-  <meta name="author" content="Gonzalo Verdugo">
-  <meta name="description" content="Repaso sobre formularios">
-  <link rel="icon" type="image/icon" href="../favicon.ico">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+<html lang="es" dir="ltr">
+
+<head>
+    <meta charset="utf-8" />
+    <title> Formularios </title>
+    <meta name="author" content="Gonzalo Verdugo">
+    <meta name="description" content="Repaso sobre formularios">
+    <link rel="icon" type="image/icon" href="../favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
-  <h1>
-    <center id="inicio">Formularios - I</center>
-  </h1>
-  <blockquote>
+    <h1>
+        <center id="inicio">Formularios - I</center>
+    </h1>
+    <blockquote>
+        <p>
+            <<<a href="08-tablas-1.html" title="Enlace a ejercicio de listas">Anterior</a>| <a href="../index.html"
+                    title="Enlace a la portada de la web">Portada</a>| <a href="11-iframes.html"
+                    title="Enlace a la siguiente página">Siguiente</a> >>
+        </p>
+    </blockquote>
+    <hr>
     <p>
-      <<<a href="08-tablas-1.html" title="Enlace a ejercicio de listas">Anterior</a>| <a href="../index.html"
-          title="Enlace a la portada de la web">Portada</a>| <a href="11-iframes.html"
-          title="Enlace a la siguiente página">Siguiente</a> >>
+        <img align="left" width="200px" src="img/facebook-logo.png" alt="Logo de facebook"
+            title="Logo de facebook en texto">
+    <h1>Rellena tu perfil</h1>
     </p>
-  </blockquote>
-  <hr>
-  <p>
-    <img align="left" width="200px" src="img/facebook-logo.png" alt="Logo de facebook"
-      title="Logo de facebook en texto">
-  <h1>Rellena tu perfil</h1>
-  </p>
 
 
 
-  <table border="2">
-<<<<<<< HEAD
-    <form action="mailto:gonver17@gmail.com" name="formualrio-registro" method="post" enctype="multipart/form-data">
-=======
-    <form action="mailto:gonver17@gmail.com" name="formualrio-registro" method="post" enctype="multipart/plain-text">
->>>>>>> adead732e624ddeb7372c26d266ecf879010941f
-      <tr>
-        <td>
+    <table border="2">
+        <<<<<<< HEAD <form action="mailto:gonver17@gmail.com" name="formualrio-registro" method="post"
+            enctype="multipart/form-data">
+            =======
+            <form action="mailto:gonver17@gmail.com" name="formualrio-registro" method="post"
+                enctype="multipart/plain-text">
+                >>>>>>> adead732e624ddeb7372c26d266ecf879010941f
+                <tr>
+                    <td>
 
 
-          <label for="nombre">
-            <h3>Nombre</h3>
-          </label>
-          <input maxlength="30" type="text" name="nombre">
-          <label for="apellidos">
-            <h3>Apellidos</h3>
-          </label>
-          <input maxlength="80" type="text" name="apellidos">
-          <label for="pass">
-            <h3>Contraseña</h3>
-          </label>
-          <input maxlength="10" type="password" name="pass">
-          <label for="dni">
-            <h3>DNI</h3>
-          </label>
-          <input type="text" maxlength="9" name="dni">
+                        <label for="nombre">
+                            <h3>Nombre</h3>
+                        </label>
+                        <input maxlength="30" type="text" name="nombre">
+                        <label for="apellidos">
+                            <h3>Apellidos</h3>
+                        </label>
+                        <input maxlength="80" type="text" name="apellidos">
+                        <label for="pass">
+                            <h3>Contraseña</h3>
+                        </label>
+                        <input maxlength="10" type="password" name="pass">
+                        <label for="dni">
+                            <h3>DNI</h3>
+                        </label>
+                        <input type="text" maxlength="9" name="dni">
 
-        </td>
-        <td>
+                    </td>
+                    <td>
 
-          <label for="sexo">
-            <h3>Sexo</h3>
-          </label>
-          <input type="radio" checked value="hombre" name="sexo">
-          <label for="hombre">Hombre</label>
-          <input type="radio" value="mujer" name="mujer">
-          <label for="mujer">Mujer</label>
-          <label for="pais">
-            <h3>País</h3>
-          </label>
-          <select name="pais" id="paises">
-            <option value="0">-Seleccione un país-</option>
-            <option value="1">ES</option>
-            <option value="2">EEUU</option>
-            <option value="3">UK</option>
-            <option value="4">FR</option>
-          </select>
-          <label for="teme">
-            <h3>Temás de interés</h3>
-          </label>
+                        <label for="sexo">
+                            <h3>Sexo</h3>
+                        </label>
+                        <input type="radio" checked value="hombre" name="sexo">
+                        <label for="hombre">Hombre</label>
+                        <input type="radio" value="mujer" name="mujer">
+                        <label for="mujer">Mujer</label>
+                        <label for="pais">
+                            <h3>País</h3>
+                        </label>
+                        <select name="pais" id="paises">
+                            <option value="0">-Seleccione un país-</option>
+                            <option value="1">ES</option>
+                            <option value="2">EEUU</option>
+                            <option value="3">UK</option>
+                            <option value="4">FR</option>
+                        </select>
+                        <label for="teme">
+                            <h3>Temás de interés</h3>
+                        </label>
 
-          <p>*Puedes seleccionar más de una una opción si mantienes pulsada la tecla CTRL</p>
-
-
-          <select name="tema" id="tema-select" size="5" multiple>
-            <option value="0">Nuevas tecnologías</option>
-            <option value="1">Deporte</option>
-            <option value="2">Turismo</option>
-            <option value="3">Informática de consumo</option>
-            <option value="4">Decoracíon</option>
-            <option value="5">Amar a Alfredo</option>
-          </select>
+                        <p>*Puedes seleccionar más de una una opción si mantienes pulsada la tecla CTRL</p>
 
 
-        </td>
-      </tr>
-      <tr>
-        <td colspan="2">
+                        <select name="tema" id="tema-select" size="5" multiple>
+                            <option value="0">Nuevas tecnologías</option>
+                            <option value="1">Deporte</option>
+                            <option value="2">Turismo</option>
+                            <option value="3">Informática de consumo</option>
+                            <option value="4">Decoracíon</option>
+                            <option value="5">Amar a Alfredo</option>
+                        </select>
 
-          <input type="checkbox" name="boletin" checked> <label for="boletin">Suscribirme al boletín</label>
 
-        </td>
-      </tr>
-      <tr>
-        <td colspan="2">
-          <form action="09-formularios-1.html" method="post" name="formulario-registro">
-            <button value="enviar" type="submit">Enviar Datos</button>
-            <button type="reset" value="borrar">Borrar los Datos</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2">
 
-        </td>
-      </tr>
-    </form>
-  </table>
+                        <input type="checkbox" name="boletin" checked> <label for="boletin">Suscribirme al
+                            boletín</label>
 
-  <hr>
-  <p align="right"><a href="#inicio">SUBIR</a></p>
-  <pre>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2">
+                        <form action="09-formularios-1.html" method="post" name="formulario-registro">
+                            <button value="enviar" type="submit">Enviar Datos</button>
+                            <button type="reset" value="borrar">Borrar los Datos</button>
+
+                    </td>
+                </tr>
+            </form>
+    </table>
+
+    <hr>
+    <p align="right"><a href="#inicio">SUBIR</a></p>
+    <pre>
 
 
 
