--- a/html-css/examen-diw.html
+++ b/html-css/examen-diw.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="es" dir="ltr">
 
-<head lang="es" dir="ltr">
+<head>
     <meta charset="utf-8" />
     <title> Guía FANTA </title>
     <meta name="author" content="Gonzalo Verdugo">
