--- a/index.html
+++ b/index.html
@@ -1,31 +1,33 @@
 <!DOCTYPE html>
+<html lang="es" dir="ltr">
 
-<head lang="es" dir="ltr">
-  <meta charset="utf-8" />
-  <title> Gonzalo Verdugo </title>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="Repaso de etiquetas fundamentales de html">
-  <meta name="author" content="Gonzalo Verdugo">
-  <link rel="icon" type="image/icon" href="favicon.ico">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="html-css/css/style.css">
+<head>
+    <meta charset="utf-8" />
+    <title> Gonzalo Verdugo </title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Repaso de etiquetas fundamentales de html">
+    <meta name="author" content="Gonzalo Verdugo">
+    <link rel="icon" type="image/icon" href="favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="html-css/css/style.css">
 </head>
 
 <body>
-  <h1 class="text-center">
-    GONZALO VERDUGO GARRIDO
-  </h1>
-  <hr>
-  <nav>
-    <ul>
+    <h1 class="text-center">
+        GONZALO VERDUGO GARRIDO
+    </h1>
+    <hr>
+    <nav>
+        <ul>
 
-      <li><a class="indexLink" href="html-css/php/correo/datos-personales-enviophp.html">CONTACTO</a></li>
-      <li><a class="indexLink" href="html-css/benchmark/benchmark.php">BENCHMARK</a></li>
-      <li><a class="indexLink" href="html-css/examen-diw.html">GUÍA DE DISEÑO</a></li>
-      <li><a class="indexLink" href="html-css/13-contenedores.html">PELICULÓN</a></li>
-      <li><a class="indexLink" href="html-css/01-xhtml.html">VINTAGE</a></li>
-    </ul>
-  </nav>
+            <li><a class="indexLink" href="html-css/bolis/bolis.html">BOLIS</a></li>
+            <li><a class="indexLink" href="html-css/php/correo/datos-personales-enviophp.html">CONTACTO</a></li>
+            <li><a class="indexLink" href="html-css/benchmark/benchmark.php">BENCHMARK</a></li>
+            <li><a class="indexLink" href="html-css/examen-diw.html">GUÍA DE DISEÑO</a></li>
+            <li><a class="indexLink" href="html-css/13-contenedores.html">PELICULÓN</a></li>
+            <li><a class="indexLink" href="html-css/01-xhtml.html">VINTAGE</a></li>
+        </ul>
+    </nav>
 
 
 </body>
