--- a/html-css/bolis/bolis.html
+++ b/html-css/bolis/bolis.html
@@ -11,34 +11,34 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nova+Square&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/b228dc2ea7.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="../css/reset.css">
+    <link rel="stylesheet" type="text/css" href="../css/normalize.css">
     <link rel="stylesheet" type="text/css" href="../css/bolis.css">
 
 </head>
 
 <body>
-    <nav>
-
-        <ul>
-            <li>
-                <a href="../../index.html">
-                    <h1><i class="fas fa-arrow-left"></i></h1>
-                </a></h1>
-            </li>
-            <li>
-                <header>
-                    <img src="../img/Bic-Logo.png" alt="logo de biic con faltas de ortografía">
-                </header>
-            </li>
-
-        </ul>
-
-    </nav>
-
     <main>
-        <h1>NUESTROS TOP VENTAS</h1>
+        <nav>
 
-        <div id="container-productos">
+            <ul>
+                <li>
+                    <a href="../../index.html">
+                        <h1><i class="fas fa-arrow-left"></i></h1>
+                    </a></h1>
+                </li>
+                <li>
+                    <header>
+                        <img src="../img/Bic-Logo.png" alt="logo de biic con faltas de ortografía">
+                    </header>
+                </li>
+
+            </ul>
+
+        </nav>
+
+        <section>
+
+
             <div class="producto">
                 <div><img src="../img/bic-cristal.jpg" alt="BIC CRISTAL"></div>
                 <div>
@@ -50,7 +50,7 @@
             <div class="producto">
                 <div><img src="../img/bic-multi.jpg" alt="PAQUETE DE BOLIS BIC"></div>
                 <div>
-                    <h2>PACK DE BIC #1</h2>
+                    <h2>MULTIBIC</h2>
                 </div>
             </div>
 
@@ -58,7 +58,7 @@
             <div class="producto">
                 <div><img src="../img/bic-pack.jfif" alt="BIC PACK"></div>
                 <div>
-                    <h2>PACK DE BIC #2</h2>
+                    <h2>PACK DE BIC </h2>
                 </div>
             </div>
 
@@ -69,17 +69,17 @@
                     <h2>MECHERO DE BIC</h2>
                 </div>
             </div>
-        </div>
 
 
 
+
+        </section>
+
+        <footer>
+            <h1 class="text-center"><i class="far fa-star-half"></i>GONZALO VERDUGO GARRIDO <i
+                    class="far fa-star-half fa-flip-horizontal"></i></h1>
+        </footer>
     </main>
-
-    <footer>
-        <h1 class="text-center"><i class="far fa-star-half"></i>GONZALO VERDUGO GARRIDO <i
-                class="far fa-star-half fa-flip-horizontal"></i></h1>
-    </footer>
-
 </body>
 
 </html>
