nueva animación y borrador

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h1 class="text-center">
         GONZALO VERDUGO GARRIDO
     </h1>
-    <hr>
+    <hr color="white">
     <nav>
         <ul>
             <li><a class="indexLink" href="html-css/bolis/bolis.html">BOLIS</a></li>
