--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <hr color="white">
     <nav>
         <ul>
-            <li><a class="indexLink" href="html-css/bolis/bolis.html">BOLIS</a></li>
+            <li><a class="indexLink" href="html-css/bet365/bet365.html">BET365</a></li>
+            <li><a class="indexLink" href="html-css/bolis/bolis.html">FLEXBOX</a></li>
             <li><a class="indexLink" href="html-css/php/correo/datos-personales-enviophp.html">CONTACTO</a></li>
             <li><a class="indexLink" href="html-css/benchmark/benchmark.php">BENCHMARK</a></li>
             <li><a class="indexLink" href="html-css/examen-diw.html">GUÍA DE DISEÑO</a></li>
