--- a/html-css/bet365/bet365.html
+++ b/html-css/bet365/bet365.html
@@ -7,6 +7,8 @@
     <link rel="icon" type="image/icon" href="../../favicon.ico">
     <meta name="description" content="Imitación de la página BET365">
     <meta name="author" content="Gonzalo Verdugo">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" type="text/css" href="bet365.css">
     <title>Gonzalo Verdugo</title>
@@ -26,8 +28,21 @@
             <div class="header-btn"><span>Accede a la página</span>
             </div>
 
-
         </header>
+
+        <section>
+            <div id="main-section">
+                <span class="sectspan1">Bonus de ingreso</span>
+                <span class="sect-span-2">Créditos de apuesta, hata 100€</span>
+                <span class="sect-span-3">Para clientes nuevos</span>
+                <button>Ver últimas cuotas</button>
+                <span class="sect-span-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis blanditiis aliquid, placeat nesciunt, omnis ab quia odio magnam nemo iure consequuntur mollitia fuga officia repellat cupiditate! Deleniti sed vitae eos.</span>
+                <span class="sect-span-4 underline" >Lorem ipsum dolor sit amet.</span>
+            </div>
+        </section>
+
+
+
 
     </main>
 
