--- a/html-css/bet365/bet365.html
+++ b/html-css/bet365/bet365.html
@@ -17,27 +17,34 @@
 <body>
     <main>
         <header>
-            <div id="logo-bet">
+            <div id="container-header">
+                <div id="logo-bet">
 
-                <img src="../img/bet365-logo.svg" alt="LOGO BET365">
+                    <img src="../img/bet365-logo.svg" alt="LOGO BET365">
 
 
 
-            </div>
-            <div class="header-btn"><span>Idioma: Español</span></div>
-            <div class="header-btn"><span>Accede a la página</span>
+                </div>
+                <div class="header-btn"><span>Idioma: Español</span></div>
+                <div class="header-btn"><span>Accede a la página</span>
+                </div>
             </div>
 
         </header>
 
         <section>
-            <div id="main-section">
-                <span class="sectspan1">Bonus de ingreso</span>
-                <span class="sect-span-2">Créditos de apuesta, hata 100€</span>
-                <span class="sect-span-3">Para clientes nuevos</span>
-                <button>Ver últimas cuotas</button>
-                <span class="sect-span-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis blanditiis aliquid, placeat nesciunt, omnis ab quia odio magnam nemo iure consequuntur mollitia fuga officia repellat cupiditate! Deleniti sed vitae eos.</span>
-                <span class="sect-span-4 underline" >Lorem ipsum dolor sit amet.</span>
+            <div id="section-container">
+                <div id="main-section">
+                    <span class="sect-span-1">Bonus de ingreso</span>
+                    <span class="sect-span-2">Créditos de apuesta, hasta 100€</span>
+                    <span class="sect-span-3">Para clientes nuevos</span>
+                    <button>Ver últimas cuotas</button>
+                    <span class="sect-span-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis blanditiis
+                        aliquid, placeat nesciunt, omnis ab quia odio magnam nemo iure consequuntur mollitia fuga
+                        officia
+                        repellat cupiditate! Deleniti sed vitae eos.</span>
+                    <span class="sect-span-4 underline">Lorem ipsum dolor sit amet.</span>
+                </div>
             </div>
         </section>
 
