--- a/html-css/bet365/bet365.html
+++ b/html-css/bet365/bet365.html
@@ -9,6 +9,7 @@
     <meta name="author" content="Gonzalo Verdugo">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/b228dc2ea7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" type="text/css" href="bet365.css">
     <title>Gonzalo Verdugo</title>
@@ -18,8 +19,9 @@
     <main>
         <header>
             <div id="container-header">
-                <div id="logo-bet">
 
+                <div id="logo-bet">
+                    <a href="../../index.html"><i class="fas fa-arrow-left"></i></a>
                     <img src="../img/bet365-logo.svg" alt="LOGO BET365">
 
 
@@ -47,6 +49,10 @@
                 </div>
             </div>
         </section>
+
+        <footer>
+            <h1>GONZALO VERDUGO</h1>
+        </footer>
 
 
 
