--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <hr color="white">
     <nav>
         <ul>
+            <li><a class="indexLink" href="https://gonzaloverdugo.000webhostapp.com/wordpress">WORDPRESS</a></li>
             <li><a class="indexLink" href="html-css/bet365/bet365.html">BET365</a></li>
             <li><a class="indexLink" href="html-css/bolis/bolis.html">FLEXBOX</a></li>
             <li><a class="indexLink" href="html-css/php/correo/datos-personales-enviophp.html">CONTACTO</a></li>
