--- a/html-css/bet365/bet365.html
+++ b/html-css/bet365/bet365.html
@@ -27,8 +27,8 @@
 
 
                 </div>
-                <div class="header-btn"><span>Idioma: Español</span></div>
-                <div class="header-btn"><span>Accede a la página</span>
+                <div class="header-btn" id="top-1"><span>Idioma: Español</span></div>
+                <div class="header-btn" id="top-2"><span>Accede a la página</span>
                 </div>
             </div>
 
