arreglo bet final

--- a/html-css/bet365/bet365.html
+++ b/html-css/bet365/bet365.html
@@ -21,8 +21,8 @@
             <div id="container-header">
 
                 <div id="logo-bet">
-                    <a href="../../index.html"><i class="fas fa-arrow-left"></i></a>
-                    <img src="../img/bet365-logo.svg" alt="LOGO BET365">
+                    <a href="../../index.html"><i id="back-arrow" class="fas fa-arrow-left"></i>
+                        <img src="../img/bet365-logo.svg" alt="LOGO BET365"></a>
 
 
 
