--- a/index.html
+++ b/index.html
@@ -9,26 +9,60 @@
     <meta name="author" content="Gonzalo Verdugo">
     <link rel="icon" type="image/icon" href="favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="html-css/css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="html-css/css/reboot.css">
+    <link rel="stylesheet" type="text/css" href="html-css/css/index.css">
+
+    <link rel="stylesheet" href="html-css/css/animate.css">
 </head>
 
 <body>
-    <h1 class="text-center">
-        GONZALO VERDUGO GARRIDO
-    </h1>
-    <hr color="white">
-    <nav>
+
+
+    <nav class="animate__animated animate__slideInDown ">
+        <input type="checkbox" id="menu">
+        <label for="menu"> ☰ </label>
+        <a class="indexLink" href="index.html">
+            <header>GV</header>
+        </a>
         <ul>
-            <li><a class="indexLink" href="https://gonzaloverdugo.000webhostapp.com/wordpress">WORDPRESS</a></li>
-            <li><a class="indexLink" href="html-css/bet365/bet365.html">BET365</a></li>
+
+            <li><a class="indexLink " href="https://gonzaloverdugo.000webhostapp.com/wordpress">WORDPRESS</a></li>
+            <li><a class="indexLink" href="html-css/bet365/bet365.html">RWD</a></li>
             <li><a class="indexLink" href="html-css/bolis/bolis.html">FLEXBOX</a></li>
             <li><a class="indexLink" href="html-css/php/correo/datos-personales-enviophp.html">CONTACTO</a></li>
             <li><a class="indexLink" href="html-css/benchmark/benchmark.php">BENCHMARK</a></li>
             <li><a class="indexLink" href="html-css/examen-diw.html">GUÍA DE DISEÑO</a></li>
             <li><a class="indexLink" href="html-css/13-contenedores.html">PELICULÓN</a></li>
             <li><a class="indexLink" href="html-css/01-xhtml.html">VINTAGE</a></li>
+
         </ul>
+
+
+
+
     </nav>
+    <section>
+        <p class="intro">
+            <b>
+                Bienvenido a mi página web
+            </b>
+        </p>
+        <p>Soy Gonzalo Verdugo,<strong> Desarrollador WEB Junior</strong></p>
+        <p>Aquí encontrarás diferentes ejercicios realizados durante el periodo que estudie 2ºDAW, en
+            IMF Business
+            School.</p>
+
+        <p>Si estas interesado en hablar conmigo, puedes escribirme un correo a <a
+                href="mailto:gonzaloverdugog@gmail.com">gonzaloverdugog@gmail.com</a> o bien contactar pinchando <a
+                href="html-css/php/correo/datos-personales-enviophp.html">aquí</a></p>
+    </section>
+    <!-- <footer>
+        <h1 class="text-center">GONZALO VERDUGO</h1>
+    </footer> -->
 </body>
 
 </html>
