--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
     <hr color="white">
     <nav>
         <ul>
-            <li><a class="indexLink" href="https://gonzaloverdugo.000webhostapp.com/wordpress">WORDPRESS</a></li>
-            <li><a class="indexLink" href="html-css/bet365/bet365.html">BET365</a></li>
-            <li><a class="indexLink" href="html-css/bolis/bolis.html">FLEXBOX</a></li>
-            <li><a class="indexLink" href="html-css/php/correo/datos-personales-enviophp.html">CONTACTO</a></li>
-            <li><a class="indexLink" href="html-css/benchmark/benchmark.php">BENCHMARK</a></li>
-            <li><a class="indexLink" href="html-css/examen-diw.html">GUÍA DE DISEÑO</a></li>
-            <li><a class="indexLink" href="html-css/13-contenedores.html">PELICULÓN</a></li>
-            <li><a class="indexLink" href="html-css/01-xhtml.html">VINTAGE</a></li>
+            <li><a target="blank" class="indexLink" href="https://gonzaloverdugo.000webhostapp.com/wordpress">WORDPRESS</a></li>
+            <li><a target="blank" class="indexLink" href="html-css/bet365/bet365.html">BET365</a></li>
+            <li><a target="blank" class="indexLink" href="html-css/bolis/bolis.html">FLEXBOX</a></li>
+            <li><a target="blank" class="indexLink" href="html-css/php/correo/datos-personales-enviophp.html">CONTACTO</a></li>
+            <li><a target="blank" class="indexLink" href="html-css/benchmark/benchmark.php">BENCHMARK</a></li>
+            <li><a target="blank"class="indexLink" href="html-css/examen-diw.html">GUÍA DE DISEÑO</a></li>
+            <li><a target="blank"class="indexLink" href="html-css/13-contenedores.html">PELICULÓN</a></li>
+            <li><a target="blank"class="indexLink" href="html-css/01-xhtml.html">VINTAGE</a></li>
         </ul>
     </nav>
 </body>
