--- a/html-css/13-contenedores.html
+++ b/html-css/13-contenedores.html
@@ -21,81 +21,83 @@
 </head>
 
 <body>
-    <header>
-        <h1 id="inicio">
-            <i class="fas fa-film icon "></i> MULTIMEDIA <i class="fas fa-film icon "></i>
-        </h1>
-        <blockquote>
-            <p>
-                <a href="12-multimedia.html" title="Enlace a ejercicio de listas">Anterior</a>||<a href="../index.html"
-                    title="Enlace a la portada de la web">Portada</a>
-            </p>
-        </blockquote>
-    </header>
+    <main>
+        <header>
+            <h1 id="inicio">
+                <i class="fas fa-film icon "></i> MULTIMEDIA <i class="fas fa-film icon "></i>
+            </h1>
+            <blockquote>
+                <p>
+                    <a href="12-multimedia.html" title="Enlace a ejercicio de listas">Anterior</a>||<a
+                        href="../index.html" title="Enlace a la portada de la web">Portada</a>
+                </p>
+            </blockquote>
+        </header>
 
-    <main id="containerPelicula">
-        <div id="fichaPelicula">
-            <div id="tituloPelicula" direction="right">
-                <h1 class="animate__animated animate__backInDown animate__delay-1s">THE MANDALORIAN</h1>
-            </div>
-            <div id="infoPelicula">
-                <div id="fotoPelicula">
-
-
-                    <img src=" img/the-mandalorian.jpg" alt="Cartel de 'The mandalorian'">
+        <section id="containerPelicula">
+            <article id="fichaPelicula">
+                <div id="tituloPelicula" direction="right">
+                    <h1 class="animate__animated animate__backInDown animate__delay-1s">THE MANDALORIAN</h1>
                 </div>
-                <div id="fichaTecnica">
-                    <div class="datosTecnicos">
-                        <h2><i class="fas fa-tools icon"></i>FICHA TÉCNICA</h2>
+                <div id="infoPelicula">
+                    <div id="fotoPelicula">
 
-                        <p><i class="far fa-clock icon-ficha "></i><b>Fecha de estreno:</b>2019</p>
-                        <p><i class="fas fa-blind icon-ficha"></i><b>Dirigida por:</b>Jon Favreu</p>
-                        <p><i class="fas fa-users icon-ficha"></i><b>Reparto:</b>Pedro Pascal, Carl Weathers</p>
-                        <p><i class="fas fa-atom icon-ficha"></i><b>Géneros:</b> Ciencia Ficción, Accion </p>
-                        <p><i class="far fa-flag icon-ficha"></i><b>País:</b> EE.UU</p>
-                        <hr>
+
+                        <img src=" img/the-mandalorian.jpg" alt="Cartel de 'The mandalorian'">
                     </div>
-                    <div class="datosTecnicos">
-                        <h2> <i class="far fa-file-alt icon"></i>SINOPSIS</h2>
-                        <p id="sinopsis">Ambientada tras la caída del Imperio y antes de la aparición de la Primera
-                            Orden, la serie
-                            sigue los
-                            pasos
-                            de Mando, un cazarrecompensas perteneciente a la legendaria tribu de los Mandalorian, un
-                            pistolero
-                            solitario
-                            que trabaja en los confines de la galaxia, donde no alcanza la autoridad de la Nueva
-                            República.</p>
+                    <div id="fichaTecnica">
+                        <div class="datosTecnicos">
+                            <h2><i class="fas fa-tools icon"></i>FICHA TÉCNICA</h2>
+
+                            <p><i class="far fa-clock icon-ficha "></i><b>Fecha de estreno:</b>2019</p>
+                            <p><i class="fas fa-blind icon-ficha"></i><b>Dirigida por:</b>Jon Favreu</p>
+                            <p><i class="fas fa-users icon-ficha"></i><b>Reparto:</b>Pedro Pascal, Carl Weathers</p>
+                            <p><i class="fas fa-atom icon-ficha"></i><b>Géneros:</b> Ciencia Ficción, Accion </p>
+                            <p><i class="far fa-flag icon-ficha"></i><b>País:</b> EE.UU</p>
+                            <hr>
+                        </div>
+                        <div class="datosTecnicos">
+                            <h2> <i class="far fa-file-alt icon"></i>SINOPSIS</h2>
+                            <p id="sinopsis">Ambientada tras la caída del Imperio y antes de la aparición de la Primera
+                                Orden, la serie
+                                sigue los
+                                pasos
+                                de Mando, un cazarrecompensas perteneciente a la legendaria tribu de los Mandalorian, un
+                                pistolero
+                                solitario
+                                que trabaja en los confines de la galaxia, donde no alcanza la autoridad de la Nueva
+                                República.</p>
 
 
 
-                        <p><b>The Mandalorian Theme</b></p>
-                        <audio src="audio/the-mandalorian-soundtrack-theme-song.mp3" type="audio/mpeg" controls></audio>
+                            <p><b>The Mandalorian Theme</b></p>
+                            <audio src="audio/the-mandalorian-soundtrack-theme-song.mp3" type="audio/mpeg"
+                                controls></audio>
 
+                        </div>
                     </div>
                 </div>
-            </div>
 
-            <div id="subContenedorPelicula">
-
-
-                <h4>The Mandalorian Season 1 Trailer</h4>
-                <video width="80%" src="video/the-mandalorian-official-trailer-2-disney-streaming-nov-12.mp4"
-                    controls></video>
+                <div id="subContenedorPelicula">
 
 
-            </div>
+                    <h4>The Mandalorian Season 1 Trailer</h4>
+                    <video width="80%" src="video/the-mandalorian-official-trailer-2-disney-streaming-nov-12.mp4"
+                        controls></video>
+
+
+                </div>
 
 
 
-        </div>
-        </div>
+            </>
+            
+        </section>
+            <hr>
+
+            <p align="right"><a href="#inicio">SUBIR</a></p>
+
     </main>
-    <hr>
-
-    <p align="right"><a href="#inicio">SUBIR</a></p>
-
-
 
 </body>
 
